WIP - build out site - clean up globals - add helpers - add easter egg - add images

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,6 +1,7 @@
 @charset 'utf-8';
 
 @import 'settings';
+@import 'npc-settings';
 @import 'foundation';
 // @import 'motion-ui';
 
@@ -8,17 +9,17 @@
 @include foundation-grid;
 // @include foundation-flex-grid;
 @include foundation-typography;
-// @include foundation-button;
-// @include foundation-forms;
+@include foundation-button;
+@include foundation-forms;
 // @include foundation-range-input;
 // @include foundation-accordion;
 // @include foundation-accordion-menu;
 // @include foundation-badge;
 // @include foundation-breadcrumbs;
 // @include foundation-button-group;
-@include foundation-callout;
+// @include foundation-callout;
 // @include foundation-close-button;
-// @include foundation-menu;
+@include foundation-menu;
 // @include foundation-menu-icon;
 // @include foundation-drilldown-menu;
 // @include foundation-dropdown;
@@ -48,7 +49,4 @@
 
 // @include motion-ui-transitions;
 // @include motion-ui-animations;
-
-body {
-    text-align: center;
-}
+@import 'default';
