--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,19 +1,18 @@
-{{!-- This is the base layout for your project, and will be used on every page. --}}
-
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neighborhood Pub Crawl</title>
-    <link rel="stylesheet" href="{{root}}assets/css/app.css">
+    <title>{{ global.siteName }} | {{ title }}</title>
+    <link type="image/x-icon" href="{{ root }}assets/img/favicon.ico">
+    <link rel="stylesheet" href="{{ root }}assets/css/app.css">
   </head>
   <body>
-
-    {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-    {{> body}}
-
-    <script src="{{root}}assets/js/app.js"></script>
+    <div class="{{ global.cssPrefix }}__wrapper">
+        {{> header }}
+        {{> body }}
+    </div>
+    <script src="{{ root }}assets/js/app.js"></script>
   </body>
 </html>
