--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,13 +14,13 @@
             </div>
         </div>
     </div>
-    <!--<div class="row">
+    <div class="row">
         <div class="small-12 columns">
-            <nav class="nav-main">
-                <ul class="vertical medium-horizontal menu">
+            <nav class="{{ global.cssPrefix }}__navMain">
+                <ul class="menu vertical medium-horizontal">
                     {{> nav-items }}
                 </ul>
             </nav>
         </div>
-    </div>-->
+    </div>
 </header>
