--- a/src/partials/nav-items.html
+++ b/src/partials/nav-items.html
@@ -1,5 +1,5 @@
-<li><a href="{{root}}/about.html">About</a></li>
-<li><a href="{{root}}/bars.html">The Bars</a></li>
-<li class="ask-cheesy"><a href="{{root}}/askcheesy.html">Ask Cheesy</a>
-    <div class="ask-cheesy-surprise"></div>
+<li><a href="{{ root }}/history.html">History</a></li>
+<li><a href="{{ root }}/bars.html">The Bars</a></li>
+<li class="{{ global.cssPrefix }}__askCheesy"><a href="{{ root }}/askcheesy.html">Ask Cheesy</a>
+    <div class="{{ global.cssPrefix }}__cheesySurprise"></div>
 </li>
