WIP - convert images to SVG's - improve l33t mode - add dummy pages

--- a/src/assets/scss/_npc-settings.scss
+++ b/src/assets/scss/_npc-settings.scss
@@ -9,6 +9,7 @@ $theme-color02: #9FBCBF; //harbor02 - light slate blue
 $theme-color03: #647678; //harbor03 - light slate grey
 $theme-color04: #2F3738; //harbor04 - dark slate grey
 $theme-color05: #59D8E5; //harbor05 - bright cyan
+$theme-colorl33t: #00FF00; //green - console green
 $image-path: "../img";
 $font-path: "../font";
 $css-prefix: 'npc';
