--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,12 @@
         <div class="small-12 medium-6 columns">
             <div class="{{ global.cssPrefix }}__brand">
                 <a href="{{ root }}/" title="Return to homepage">
-                    <img src="{{ root }}assets/img/logo.png" alt="{{ global.siteName }}" title="Return to homepage">
+                    <img src="{{ root }}assets/img/logo.svg" alt="{{ global.siteName }}" title="Return to homepage">
+                </a>
+            </div>
+            <div class="{{ global.cssPrefix }}__brand--l33tMode">
+                <a href="{{ root }}/" title="Return to homepage">
+                    <img src="{{ root }}assets/img/logol33t.svg" alt="{{ global.siteName }}" title="Return to homepage">
                 </a>
             </div>
         </div>
