--- a/src/partials/nav-items.html
+++ b/src/partials/nav-items.html
@@ -3,3 +3,4 @@
 <li class="{{ global.cssPrefix }}__askCheesy {{#ifpage 'askcheesy'}}selected{{/ifpage}}"><a href="{{ root }}/askcheesy.html">Ask Cheesy</a>
     <div class="{{ global.cssPrefix }}__cheesySurprise"></div>
 </li>
+<li {{#ifpage 'gallery'}}class="selected"{{/ifpage}}><a href="{{ root }}/gallery.html">Gallery</a></li>
