--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ global.siteName }} | {{ title }}</title>
+    <title>{{ title }} | {{ global.siteName }}</title>
     <link type="image/x-icon" href="{{ root }}assets/img/favicon.ico">
     <link rel="stylesheet" href="{{ root }}assets/css/app.css">
   </head>
