--- a/src/partials/nav-items.html
+++ b/src/partials/nav-items.html
@@ -1,6 +1,7 @@
 <li {{#ifpage 'history'}}class="selected"{{/ifpage}}><a href="{{ root }}/history.html">History</a></li>
 <li {{#ifpage 'bars'}}class="selected"{{/ifpage}}><a href="{{ root }}/bars.html">The Bars</a></li>
 <li {{#ifpage 'signup'}}class="selected"{{/ifpage}}><a href="{{ root }}/signup.html">Sign Up</a></li>
+<li {{#ifpage 'whospounding'}}class="selected"{{/ifpage}}><a href="{{ root }}/whospounding.html">Who's Pounding?</a></li>
 <!--<li class="{{ global.cssPrefix }}__askCheesy {{#ifpage 'askcheesy'}}selected{{/ifpage}}"><a href="{{ root }}/askcheesy.html">Ask Cheesy</a>
     <div class="{{ global.cssPrefix }}__cheesySurprise"></div>
 </li>
