--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -44,7 +44,7 @@
             text-align: center;
         }
     }
-    
+
     &__annual {
         font-size: rem-calc(14);
         letter-spacing: rem-calc(-1);
@@ -202,7 +202,7 @@
 
     &__feature {
         text-align: center;
-        
+
         h2,
         h3 {
             line-height: 1;
@@ -256,33 +256,42 @@
             text-align: left;
         }
     }
+
+
+
 }
 
 .checkout {
-        &.checkout--venmo {
+    &.checkout--venmo {
 
-        }
+    }
+}
+
+.payment-button {
+    display: block;
+    padding: 1rem 0;
+    text-align: center;
+
+    &.payment-button--venmo img {
+        width: 50%;
     }
 
-    .payment-button {
-        display: block;
-        padding: 1rem 0;
-        text-align: center;
-
-        &.payment-button--venmo img {
-            width: 50%;
-        }
-
-        &.payment-button--paypal img {
-            // width: 50%;
-        }
+    &.payment-button--paypal img {
+        // width: 50%;
     }
+}
+
+.seriously  {
+    color: red;
+    font-size: 32px;
+    font-weight: bold;
+}
 
 // Easter Egg
 
 body.#{$css-prefix}--l33tMode {
     background-color: #000;
-    
+
     * {
         font-family: 'IBMVGA8';
         color: $theme-colorl33t;
@@ -309,7 +318,7 @@ body.#{$css-prefix}--l33tMode {
                 li {
                     a {
                         color: $theme-colorl33t;
-                    
+
                         &:hover {
                             background-color: $theme-color04;
                             color: $theme-colorl33t;
